<resources>
    <string name="app_name">Doodler</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="size">Size</string>
    <string name="hue">Hue</string>
    <string name="brightness">Brightness</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="title_activity_settings">Settings</string>
</resources>
