<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="cmsc434.doodler.MainActivity"
    android:background="#EEEEEE">

    <cmsc434.doodler.DoodleView
        android:id="@+id/doodleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_above="@+id/buttonUndo"
        android:layout_marginBottom="11dp" />

    <Button
        android:text="@string/redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRedo"
        android:width="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:id="@+id/buttonUndo"
        android:width="100dp"
        android:layout_above="@+id/buttonRedo"
        android:layout_alignLeft="@+id/buttonRedo"
        android:layout_alignStart="@+id/buttonRedo" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClear"
        android:width="100dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonUndo"
        android:layout_toEndOf="@+id/buttonUndo"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/buttonSettings"
        android:width="100dp"
        android:layout_alignBaseline="@+id/buttonClear"
        android:layout_alignBottom="@+id/buttonClear"
        android:layout_toLeftOf="@+id/buttonRedo"
        android:layout_toStartOf="@+id/buttonRedo"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

</RelativeLayout>