<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="cmsc434.doodler.SettingsActivity">

    <cmsc434.doodler.PaintView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonSettings" />


    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOK"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSatr"
        android:max="255"
        android:layout_below="@+id/textSaturation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSaturation"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@+id/seekBarBright"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarBright"
        android:max="255"
        android:layout_below="@+id/textBrightness"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBrightness"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@+id/seekBarHue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarHue"
        android:max="360"
        android:layout_below="@+id/textHue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/seekBarSize"
        android:max="200"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHue"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@+id/seekBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSize"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="199dp" />

</RelativeLayout>
